[workspace]
members = ["bevy-reflect-deser", "template-kdl", "multierr-span"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
bevy_reflect = "0.8.0-dev"
bevy_utils = "0.8.0-dev"
kdl = "4.1"
mappable-rc = "0.1"
miette = "4.6"
nonmax = "0.5"
serde = "1.0"
strsim = "0.10.0"
thiserror = "1.0"
pretty_assertions = "1.2"