[package]
name = "bevy-kdl-scene"
authors = ["Nicola Papale"]
description = "A Bevy scene format using KDL"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy"]
default = []

[dependencies]
thiserror = "1.0"
bevy_reflect = "0.8.0-dev"
kdl = "4.1"
miette = "4.6"
bevy-reflect-deser = { version = "0.4.0", path = "../bevy-reflect-deser" }
template-kdl = { version = "0.4.0", path = "../template-kdl"}
