[package]
name = "bevy-reflect-deser"
authors = ["Nicola Papale"]
description = "A deserializer using bevy_reflect currently only supports template-kdl"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.2.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy"]
default = ["fancy-errors"]

[dependencies]
thiserror = "1.0"
template-kdl = { version = "0.2.0", path = "../template-kdl"}
bevy_reflect = "0.8.0-dev"
kdl = "4.1"
nonmax = "0.5"
miette = "4.6"

[dev-dependencies]
# For testing the hashmap reflection
bevy_reflect = "0.8.0-dev"
bevy_utils = "0.8.0-dev"
miette = {version ="4.6", features=["fancy"]}
