[package]
name = "bevy-reflect-deser"
authors = ["Nicola Papale"]
description = "A deserializer using bevy_reflect currently only supports template-kdl"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy", "strsim"]
default = ["fancy-errors"]

[dependencies]
strsim = { workspace = true, optional = true }
multierr-span = { version = "0.4.0", path = "../multierr-span"}
thiserror = { workspace = true }
template-kdl = { version = "0.4.0", path = "../template-kdl"}
bevy_reflect = { workspace = true }
kdl = { workspace = true }
nonmax = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
# For testing the hashmap reflection
bevy_utils = { workspace = true }
miette = { workspace = true, features=["fancy"]}
