[package]
name = "bevy_kdl_scene"
authors = ["Nicola Papale"]
description = "A Bevy scene format using KDL"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy"]
default = []

[dependencies]
anyhow = { workspace = true }
bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_ecs = { workspace = true }
bevy_kdl_reflect_deser = { version = "0.4.0", path = "../bevy_kdl_reflect_deser" }
bevy_reflect = { workspace = true }
bevy_utils = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
template_kdl = { version = "0.4.0", path = "../template_kdl"}
thiserror = { workspace = true }
