[package]
name = "bevy_kdl_scene"
authors = ["Nicola Papale"]
description = "A Bevy scene format using KDL"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy"]
default = []

[dependencies]
anyhow = { workspace = true }
bevy_kdl_reflect_deser = { version = "0.4.0", path = "../bevy_kdl_reflect_deser" }
bevy = { workspace = true, default-features = false, features = [ "bevy_asset" ] }
kdl = { workspace = true }
miette = { workspace = true }
slotmap = { workspace = true }
template_kdl = { version = "0.4.0", path = "../template_kdl"}
thiserror = { workspace = true }
