[package]
name = "bevy-kdl-ui"
authors = ["Nicola Papale"]
description = "Helpers for ergonomic UI in bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup"]
categories = ["game-development"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
fancy-errors = ["miette/fancy"]
default = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
bevy_reflect = { workspace = true }
kdl = { workspace = true }
nonmax = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
# For testing the hashmap reflection
bevy_reflect = { workspace = true }
bevy_utils = { workspace = true }
miette = { workspace = true , features=["fancy"]}
