[package]
name = "multierr-span"
authors = ["Nicola Papale"]
description = "A crate to simplify dealing with accumulating errors and spans"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
default = []
kdl-impls = ["kdl"]
mappable-rc-impls = ["mappable-rc"]

[dependencies]
kdl = {version = "4.2", optional = true}
mappable-rc = {version = "0.1", optional = true}

