[package]
name = "multierr-span"
authors = ["Nicola Papale"]
description = "A crate to simplify dealing with accumulating errors and spans"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[features]
default = []
kdl-impls = ["kdl"]
mappable-rc-impls = ["mappable-rc"]

[dependencies]
kdl = { workspace = true , optional = true}
mappable-rc = { workspace = true, optional = true}

