[package]
name = "template-kdl"
authors = ["Nicola Papale"]
description = "A KDL dialect with templates"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["markup"]
repository = "https://github.com/nicopap/bevy-kdl-ui"
version = "0.4.0"
edition = "2021"

[dependencies]
multierr-span = { version = "0.4.0", features = ["kdl-impls", "mappable-rc-impls"], path = "../multierr-span"}
serde = { workspace = true }
thiserror = { workspace = true }
kdl = { workspace = true }
mappable-rc = { workspace = true }

[dev-dependencies]
miette = { workspace = true , features=["fancy"]}
pretty_assertions = { workspace = true }